checks if new articles are there

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,10 @@
         <div id="notes" class="col-4 text-center border-left form-group p-4"></div>
       </div>
     </div>
-    <footer class="text-right container">
-      <button class="badge badge-light">Clear Database</button>
+    <div class="container">
+    <footer class="row">
+      <p class="col-9 alert alert-light">Number of Articles: <span id="number-articles"></span></p>
+      {{!-- <button class="col-3 badge badge-light">Clear Database</button> --}}
     </footer>
+    </div>
   </div>
